quick-dirty fix for POI

--- a/src/app/routes/play/play.component.sass
+++ b/src/app/routes/play/play.component.sass
@@ -2,10 +2,15 @@
   transition: filter 0.3s
   // background: white
 
-.game-frame
+.game_frame
   display: block
   border: 0
   margin: 24px auto
+  &.pure
+    position: fixed
+    left: 0
+    top: 0
+    margin: 0
 
 .loading
   filter: brightness(0.5)
