--- a/src/app/routes/play/play.component.html
+++ b/src/app/routes/play/play.component.html
@@ -1,3 +1,3 @@
 <div class="game-container" class.bind="loading ? 'loading' : ''">
-  <iframe id="game-frame" class="game-frame" *ngIf="osapi" [src]="osapi | safeResourceUrl" [width]="iframeWidth" [height]="iframeHeight" scrolling="no" allowfullscreen='true'></iframe>
+  <iframe id="game_frame" class="game_frame" *ngIf="osapi" [class.pure]="pure && 'pure'" [src]="osapi | safeResourceUrl" [width]="iframeWidth" [height]="iframeHeight" scrolling="no" allowfullscreen='true'></iframe>
 </div>
