temporary commit before update

--- a/src/app/components/game-info-list/game-info-list.component.sass
+++ b/src/app/components/game-info-list/game-info-list.component.sass
@@ -30,7 +30,7 @@
     .game-info-content
       display: flex
       flex-direction: column
-      justify-content: space-evenly
+      justify-content: center
       h2
         font-size: 1.25rem
         font-weight: 500
